# rs-embedded-fish

./: Cargo.toml  README.md
src/: fish.raw  main.rs
