[package]
name = "rs-embedded-fish"
version = "0.1.0"
authors = ["Patrick Pelletier <code@funwithsoftware.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-slice-cast = "0.3.5"
embedded-graphics = "0.6.2"
rand = { version = "0.7.3", default-features = false }
rand_pcg = "0.2.1"
gd32vf103xx-hal = "0.3.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
riscv = "0.5.4"
st7735-lcd = { version = "0.7", optional = true }
riscv-rt = "0.6.1"
panic-halt = "0.2.0"
